# jax-feature-pipeline-benchmark

./: README.md  pyproject.toml  run_benchmark.py
.github/workflows/: lint.yml
src/: benchmark.py  data_generator.py  features_jax.py  features_pandas.py
