[project]
name = "jax-feature-pipeline-benchmark"
version = "0.1.0"
description = "Benchmark: JAX vs Pandas/NumPy for time-series feature engineering at scale"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.26",
    "pandas>=2.2",
    "snowflake-connector-python>=3.12",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
benchmark = "run_benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
